src/objects/QPMS__NC_CAPA__c.object
<CustomObject>
    <description>This is junction object between NC and CAPA.</description>
    <fields>
        <fullName>QPMS__CAPA_Name__c</fullName>
        <formula>QPMS__CAPA__r.QPMS__CAPA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>NC CAPAs</relationshipLabel>
        <relationshipName>NC_CAPAs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__NC_Name__c</fullName>
        <formula>QPMS__Non_Conformance__r.QPMS__Non_Conformance_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>NC CAPAs</relationshipLabel>
        <relationshipName>NC_CAPAs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>NC CAPA</label>
    <nameField>
        <displayFormat>NCCAPA-{0000}</displayFormat>
        <label>NC CAPA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NC CAPAs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>